--- a/FreeCodeCamp/Cafe Menu/index.html
+++ b/FreeCodeCamp/Cafe Menu/index.html
@@ -50,7 +50,7 @@
         </main>
         <hr class="bottom-line">
         <footer>
-            <p>
+            <p class="address">
               <a href="https://www.freecodecamp.org" 
                 target="_blank">
                 Visit our website
